2004-01-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Try to reflect the new modules decision
	for GNOME 2.6.

2004-01-20  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Changed POT file for gtk+-properties
	back to gtk20.pot.

2004-01-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Corrected pot file name for
	gtk+-properties.

2004-01-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed last few bits of 1.4 translation
	status pages.

2004-01-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added muine and gtk+-properties.

2004-01-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Switched guikachu to point at HEAD.

2004-01-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added blam.

2004-01-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-volume-manager.

2004-01-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-netstatus should also be in proposed.

2004-01-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added dasher to proposed.

2004-01-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gal should also be in proposed.

2004-01-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gtkhtml should also be in proposed.

2004-01-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added a "proposed" section with modules
	proposed for the GNOME 2.6 release.

2004-01-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added epiphany-extensions.

2003-12-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: zenity has been branched.

2003-12-29  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Set gnumeric branch to "gnumeric-1-2".

2003-12-29  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Added setup-tools-backends.
