@@ -49,15 +49,6 @@
         <download/>
       </component>
     </version>
-    <version release="gnome-2.6">
-      <component name="acme" dir="acme" group="desktop">
-        <podir dir="po"/>
-        <potname name="acme.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
   </module>
   <module name="alleyoop">
     <version release="gnome-2.6">
