@@ -1,3 +1,7 @@
+2004-01-28  Carlos Perelló Marín <carlos@gnome.org>
+
+	* translation-status.xml: Acme is now inside gnome-control-center
+
 2004-01-24  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Try to reflect the new modules decision
